finished display styling

--- a/src/styles/scss/app.scss
+++ b/src/styles/scss/app.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: space-around;
   width: 750px;
-
 }
 
 .display {
@@ -11,4 +10,5 @@
   height: 100px;
   text-align: right;
   color: white;
+  padding: 20px;
 }
