--- a/src/styles/scss/app.scss
+++ b/src/styles/scss/app.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 750px;
+  width: 700px;
   box-sizing: border-box;
   margin: 0 auto;
 }
@@ -27,28 +27,11 @@
   flex: 1 0 auto;
 }
 
-.button {
-  width: 25%;
-}
-
-.wide {
-  width: 50%;
-}
-
 button {
-  padding: 10% 90px;
-  border: 2px solid grey;
+  border: 2px solid gainsboro;
   flex: 1 0 auto;
   font-size: 1.5em;
   font-weight: 400;
   width: 100%;
-}
-
-.button-wide {
-  padding: 5% 90px;
-}
-
-.orange {
-  background-color: orange;
 }
 
